<resources>
    <string name="app_name" translatable="false">RadarMe</string>
    <string name="action_settings">Opciones</string>

    <string name="text_view_distance">Distancia:</string>
    <string name="text_view_refresh_time_text">Última actualización: %s hs.</string>
    <string name="text_view_speed_limit_text">Máxima velocidad:</string>
    <string name="text_view_distance_value" translatable="false">%.1f Km</string>
    <string name="text_view_speed_limit_value_text" translatable="false">%s</string>
    <string name="action_refresh">Actualizar</string>
    <string name="button_select_destination">Seleccione destino</string>
    <string name="button_start_travel">Iniciar Viaje</string>
    <string name="pref_customized_first_notification">Primera Notificación</string>
    <string name="pref_distance_title">Distancia</string>
    <string name="pref_first_notification_distance_summary">Seleccione la distancia al radar para la notificación más lejana.</string>
    <string name="pref_sound_title">Sonido</string>
    <string name="pref_first_notification_sound_summary">Seleccione un tono para la notificación más lejana.</string>
    <string name="pref_led_color_title">Color de LED</string>
    <string name="pref_first_notification_led_color_summary">Seleccione el color del LED para la notificación más lejana.</string>
    <string name="title_activity_settings">Opciones</string>
    <string name="pref_customized_second_notification">Segunda Notificación</string>
    <string name="pref_second_notification_sound_summary">Seleccione un tono para la notificación intermedia.</string>
    <string name="pref_second_notification_distance_summary">Selccione la distancia al radar de la notificación intermedia.</string>
    <string name="pref_second_notification_led_color_summary">Seleccione el color del LED para la notificación intermedia.</string>
    <string name="pref_customized_third_notification">Tercera Notificación</string>
    <string name="pref_third_notification_distance_summary">Seleccione la distancia al radar para la notificación más cercana.</string>
    <string name="pref_third_notification_sound_summary">Seleccione un tono para la notificación más cercana.</string>
    <string name="pref_third_notification_led_color_summary">Seleccione el color del LED para la notificación más cercana.</string>
    <string name="buton_dialog_cancel">Cancelar</string>
    <string name="textView_welcome">Bienvenido a RadarMe!</string>
    <string name="enableGPS_dialog">Activar GPS</string>
    <string name="cancelGPS_dialog">Cancelar</string>
    <string name="messageGPS_dialog">Tu GPS parece estar desactivado, ¿Quieres activarlo ahora?</string>
    <string name="sub_klaxon">Bocina de submarino</string>
    <string name="factory">Fábrica</string>
    <string name="air_horn">Sirena de aire</string>
    <string name="beep_ping">Ping de beep</string>
    <string name="smb_flagpole">Bajar por el mástil</string>
    <string name="smb_pipe">Cañería</string>
    <string name="smb_vine">Planta que crece</string>
    <string name="smb_warning">Poco tiempo</string>
    <string name="ok">Aceptar</string>
    <string name="led_color_white">Blanco</string>
    <string name="led_color_red">Rojo</string>
    <string name="led_color_green">Verde</string>
    <string name="led_color_blue">Azul</string>
    <string name="led_color_yellow">Amarillo</string>
    <string name="led_color_cyan">Celeste</string>
    <string name="led_color_magenta">Púrpura</string>
    <string name="cancel">Cancelar</string>
    <string name="message_no_location_dialog">No puedo obtener una ubicación. Pruebe en otro lugar.</string>
    <string name="loading">Cargando&#8230;</string>
    <string name="Destinations_dialog_title">Elija destino&#8230;</string>
    <string name="warning_message">Atención!</string>
    <string name="radar_message">Radar a %1$.0f metros. Km %2$.0f</string>
    <string name="sound_path" translatable="false">android.resource://</string>
    <string name="mdq" translatable="false">Mar del Plata</string>
    <string name="internetDialogCancel">Cancelar</string>
    <string name="intenetDataDiagloTitle">Su wi-fi/datos moviles no se encuentran activos&#8230;</string>
    <string name="internetDialogAccept">Activar</string>
    <string name="title_activity_map">Mapa</string>
    <string name="button_show_map">Ver mapa</string>
    <string name="button_end">Terminar Viaje</string>
    <string name="first_time_connection">Se ha detectado que usted no posee los datos necesarios para continuar ejecutando esta app, por favor habilite cualquier tipo de conexion de datos para continuar.</string>
    <string name="end_trip">¿Está seguro que desea terminar el viaje?</string>
    <string name="distance_error_no_gps">No GPS</string>
    <string name="speed_error_no_gps" translatable="false">-</string>
    <string name="pref_refresh_time">Período de Actualización</string>
    <string name="refresh_10_seconds">10 Segundos</string>
    <string name="refresh_1_second">1 Segundo</string>
    <string name="refresh_5_seconds">5 Segundos</string>
    <string name="refresh_manual">Actualización manual</string>
    <string name="pref_refresh_time_summary">Seleccione cada cuanto tiempo desea que se actualice la distancia al radar y su velocidad</string>
    <string name="text_view_speed">Velocidad actual:</string>
    <string name="text_view_speed_value" translatable="false">%.0f Km/h</string>
    <string name="map_activity_km"  translatable="false">%1$s km %2$s</string>
    <string name="message_map_toast">Cargando  mapa&#8230;</string>
    <string name="text_view_info_radar" translatable="false">(Km %s)</string>
    <string name="text_view_last_radar_title">Viaje tranquilo,</string>
    <string name="text_view_last_radar_text">ya pasó el último radar.</string>
    <string name="button_last_radar_end">Cerrar</string>
    <string name="first_notification_preference_distance" translatable="false">first_notification_preference_distance</string>
    <string name="first_notification_preference_sound" translatable="false">first_notification_preference_sound</string>
    <string name="first_notification_preference_led_color" translatable="false">first_notification_preference_led_color</string>
    <string name="second_notification_preference_distance" translatable="false">second_notification_preference_distance</string>
    <string name="second_notification_preference_sound" translatable="false">second_notification_preference_sound</string>
    <string name="second_notification_preference_led_color" translatable="false">second_notification_preference_led_color</string>
    <string name="third_notification_preference_sound" translatable="false">third_notification_preference_sound</string>
    <string name="third_notification_preference_led_color" translatable="false">third_notification_preference_led_color</string>
    <string name="preference_refresh_time" translatable="false">preference_refresh_time</string>
</resources>
