<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_customized_first_notification">
        <EditTextPreference android:key="first_notification_preference_distance"
            android:title="@string/pref_distance_title" android:summary="@string/pref_first_notification_distance_summary"/>
        <RingtonePreference android:key="first_notification_preference_sound"
            android:title="@string/pref_sound_title" android:summary="@string/pref_first_notification_sound_summary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_customized_second_notification">
        <EditTextPreference android:key="second_notification_preference_distance"
            android:title="@string/pref_distance_title" android:summary="@string/pref_second_notification_distance_summary"/>
        <RingtonePreference android:key="second_notification_preference_sound"
            android:title="@string/pref_sound_title" android:summary="@string/pref_second_notification_sound_summary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_customized_third_notification">
        <EditTextPreference android:key="third_notification_preference_distance"
            android:title="@string/pref_distance_title" android:summary="@string/pref_third_notification_distance_summary"/>
        <RingtonePreference android:key="third_notification_preference_sound"
            android:title="@string/pref_sound_title" android:summary="@string/pref_third_notification_sound_summary"/>
    </PreferenceCategory>
</PreferenceScreen>